--- a/caoching-aboutus-2/aboutus.html
+++ b/caoching-aboutus-2/aboutus.html
@@ -45,7 +45,7 @@
                                 <a class="nav-link-custom" href="#">Support</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link-custom" href="#">Shop</a>
+                                <a class="nav-link-custom" href="\coaching-shop\shop.html">Shop</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link-custom" href="\caoaching-abouts\contactus.html">Contact Us</a>
