--- a/coaching-support/support.html
+++ b/coaching-support/support.html
@@ -150,8 +150,8 @@
                         </div>
                     </div><br><br><br>
 
-                    <h2 class="mb-4 ms-5 asked-heading">Frequently Asked Question</h2>
-                    <p class="card-text mb-4 ms-5">Lorem Ipsum has been the industry's standard dummy text ever.</p>
+                    <h2 class="mb-3 ms-5 asked-heading">Frequently Asked Question</h2>
+                    <p class="card-text mb-5 ms-5">Lorem Ipsum has been the industry's standard dummy text ever.</p>
 
                     <div class="row ms-5">
                         <div class="col-12 col-md-6">
@@ -159,38 +159,60 @@
                             <div class="d-flex align-items-start mb-4">
                                 <img src="src/coaching-support/tick-orange.svg" alt="">
                                 <div>
-                                    <h6 class="mb-2">Lorem ipsum is dummy text of printing</h6>
-                                    <p class="text-muted small">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout, ipsum.</p>
+                                    <h6 class="mb-4 asked-question-h6">Lorem ipsum is dummy text of printing</h6>
+                                    <p class="card-text ms-3">It is a long established fact that a reader will be distracted by the <br>
+                                        readable content of a page when looking at its layout, ipsum.</p>
                                 </div>
                             </div>
 
-                            <div class="d-flex align-items-start mb-4">
-                                <hr class="me-3 mt-2 flex-grow-0" style="width: 2rem;">
+                            <div class="d-flex align-items-start mb-4 mt-5">
+                                <img src="src/coaching-support/line-here-now.png" class="me-3 mt-2" alt="">
                                 <div>
-                                    <p class="mb-0">Lorem ipsum is dummy text of printing</p>
+                                    <p class="mb-0 main-title-hexa-linesin">Lorem ipsum is dummy text of printing</p>
                                 </div>
                             </div>
 
-                            <div class="d-flex align-items-start mb-4">
-                                <hr class="me-3 mt-2 flex-grow-0" style="width: 2rem;">
+                            <div class="d-flex align-items-start mb-4 mt-5">
+                                <img src="src/coaching-support/line-here-now.png" class="me-3 mt-2" alt="">
                                 <div>
-                                    <p class="mb-0">Lorem ipsum is dummy text of printing</p>
+                                    <p class="mb-0 main-title-hexa-linesin">Lorem ipsum is dummy text of printing</p>
+                                </div>
+                            </div>
+
+                            <div class="d-flex align-items-start mb-4 mt-5">
+                                <img src="src/coaching-support/line-here-now.png" class="me-3 mt-2" alt="">
+                                <div>
+                                    <p class="mb-0 main-title-hexa-linesin">Lorem ipsum is dummy text of printing</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-12 col-md-6">
 
-                            <div class="d-flex align-items-start mb-4">
-                                <hr class="me-3 mt-2 flex-grow-0" style="width: 2rem;">
+                            <div class="d-flex align-items-start mb-4 mb-5">
+                                <img src="src/coaching-support/line-here-now.png" class="me-3 mt-2" alt="">
                                 <div>
-                                    <p class="mb-0">Lorem ipsum is dummy text of printing</p>
+                                    <p class="mb-0 main-title-hexa-linesin">Lorem ipsum is dummy text of printing</p>
                                 </div>
                             </div>
-                            <!-- List item 4 -->
-                            <div class="d-flex align-items-start mb-4">
-                                <hr class="me-3 mt-2 flex-grow-0" style="width: 2rem;">
+                            
+                            <div class="d-flex align-items-start mb-4 mb-5">
+                                <img src="src/coaching-support/line-here-now.png" class="me-3 mt-2" alt="">
                                 <div>
-                                    <p class="mb-0">Lorem ipsum is dummy text of printing</p>
+                                    <p class="mb-0 main-title-hexa-linesin">Lorem ipsum is dummy text of printing</p>
+                                </div>
+                            </div>
+
+                            <div class="d-flex align-items-start mb-4 mb-5">
+                                <img src="src/coaching-support/line-here-now.png" class="me-3 mt-2" alt="">
+                                <div>
+                                    <p class="mb-0 main-title-hexa-linesin">Lorem ipsum is dummy text of printing</p>
+                                </div>
+                            </div>
+
+                            <div class="d-flex align-items-start mb-4 mb-5">
+                                <img src="src/coaching-support/line-here-now.png" class="me-3 mt-2" alt="">
+                                <div>
+                                    <p class="mb-0 main-title-hexa-linesin">Lorem ipsum is dummy text of printing</p>
                                 </div>
                             </div>
                         </div>
@@ -198,7 +220,6 @@
                 </div>
             </section>
 
-            <br><br><br>
             <div class="colorful-lines mb-2">
                 <div class="line rounded ms-3"></div>
                 <div class="line rounded "></div>
