--- a/coaching/coaching.html
+++ b/coaching/coaching.html
@@ -208,7 +208,7 @@
 
 
             <section class="services-section py-5">
-                <div class="container my-5">
+                <div class="container my-md-5">
                     <div class="row justify-content-center text-center mb-5">
                         <div class="col-lg-8">
                             <h2 class="main-title">What Services We Provide</h2>
@@ -216,23 +216,23 @@
                         </div>
                     </div>
 
-                    <div class="row justify-content-center position-relative">
-                        <div class="nav-arrow left-arrow"><img src="src/coaching/left-arrow-navigate.svg" alt=""></div>
-                        <div class="nav-arrow right-arrow"><img src="src/coaching/right-arrow-naivgate.svg" alt=""></div>
+                    <div class="row justify-content-center position-relative g-4">
+                        <div class="nav-arrow left-arrow d-none d-xl-flex"><img src="src/coaching/left-arrow-navigate.svg" alt=""></div>
+                        <div class="nav-arrow right-arrow d-none d-xl-flex"><img src="src/coaching/right-arrow-naivgate.svg" alt=""></div>
 
-                        <div class="col-md-3 mb-4">
-                            <div class="service-card shadow-sm overflow-hidden">
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="service-card shadow-sm h-100 overflow-hidden">
                                 <img src="src/coaching/whatservices-1.png" class="card-img-top img-fluid" alt="Group Coaching">
                                 <div class="card-body card-blue p-4">
                                     <h5 class="card-title-111111">Group Coaching <br> (6-wk Zoom series)</h5>
                                     <p class="card-text-111111">Lorem Ipsum has been the industry's <br> standard dummy text ever since the 1500s,</p>
-                                    <a href="#" class="know-more-btn">KNOW MORE <img src="src/coaching/right arrow-orange-what-service-black.svg" alt=""></a>
+                                    <a href="#" class="know-more-btn">KNOW MORE <img src="src/coaching/right arrow-orange-what-service-black.svg" alt="arrow"></a>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="col-md-3 mb-4">
-                            <div class="service-card shadow-sm overflow-hidden">
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="service-card shadow-sm h-100 overflow-hidden">
                                 <img src="src/coaching/whatservices-2.png" class="card-img-top img-fluid" alt="One-On-One Coaching">
                                 <div class="card-body card-white p-4">
                                     <h5 class="card-title-222222">One-On-One <br> Homeschool Coaching</h5>
@@ -242,8 +242,8 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3 mb-4">
-                            <div class="service-card shadow-sm overflow-hidden">
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="service-card shadow-sm h-100 overflow-hidden">
                                 <img src="src/coaching/whatservices-3.png" class="card-img-top img-fluid" alt="Monthly Support Group">
                                 <div class="card-body card-white p-4">
                                     <h5 class="card-title-3">Monthly Zoom Support Group</h5>
@@ -254,56 +254,62 @@
                         </div>
                     </div>
 
-                    <div class="row">
-                        <div class="text-center d-flex justify-content-center align-items-center">
+                    <div class="row mt-5">
+                        <div class=" col-12 d-flex justify-content-center">
                             <a href="#" class="btn btn-explore-more d-flex justify-content-center align-items-center">Explore More</a>
                         </div>
                     </div>
                 </div>
-            </section>
+            </section>  
 
 
             <section class="products-section py-5">
-                <div class="container my-4">
-                    <div class="row align-items-center mb-5">
-                        <div class="col-md-8">
+                <div class="container my-md-4">
+                    <div class="row align-items-center mb-5 g-3">
+                        <div class="col-md-8 text-center text-md-start">
                             <h2 class="main-title">Our Products</h2>
                             <p class="subtitle-p-col">Lorem Ipsum has been the industry's standard dummy text</p>
                         </div>
-                        <div class="col-md-4 text-md-end d-flex justify-content-end">
-                            <a href="#" class="btn btn-visit-shop d-flex justify-content-center align-items-center">Visit Shop</a>
+                        <div class="col-md-4 d-flex justify-content-center justify-content-md-end">
+                            <a href="#" class="btn btn-visit-shop">Visit Shop</a>
                         </div>
                     </div>
 
                     <div class="row g-4">
-                        <div class="col-lg-3 col-md-6">
+                        <div class="col-lg-3 col-sm-6">
                             <div class="product-card">
-                                <img src="src/coaching/our-product-1.png" class="img-fluid mb-3" alt="Building Blocks Workbook">
+                                <div class="img-container mb-3">
+                                    <img src="src/coaching/our-product-1.png" class="img-fluid" alt="Building Blocks Workbook">
+                                </div>
                                 <h5 class="product-name">BUILDING B.L.O.C.K.S. <br> WKBK</h5>
                                 <p class="product-price">$9.45</p>
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-6">
+                        <div class="col-lg-3 col-sm-6">
                             <div class="product-card">
-                                <img src="src/coaching/our-product-2.png" class="img-fluid mb-3" alt="Building Blocks DIY Kits">
+                                <div class="image-container mb-3">
+                                    <img src="src/coaching/our-product-2.png" class="img-fluid" alt="Building Blocks DIY Kits">
+                                </div>
                                 <h5 class="product-name">BUILDING B.L.O.C.K.S <br> D.I.Y Kits</h5>
                                 <p class="product-price">$9.45</p>
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-6">
+                        <div class="col-lg-3 col-ms-6">
                             <div class="product-card">
-                                <img src="src/coaching/our-product-3.png" class="img-fluid mb-3" alt="T-Shirts">
+                                <div class="image-container mb-3">
+                                    <img src="src/coaching/our-product-3.png" class="img-fluid" alt="T-Shirts">
+                                </div>
                                 <h5 class="product-name">T-Shirts</h5>
                                 <p class="product-price">$9.45</p>
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-6">
+                        <div class="col-lg-3 col-ms-6">
                             <div class="product-card-4-img">
-                                <div class="image-wrapper">
-                                    <img src="src/coaching/our-product-4.png" class="img-fluid mb-3 product-bg">
+                                <div class="image-wrapper mb-3">
+                                    <img src="src/coaching/our-product-4.png" class="img-fluid product-bg">
                                 </div>
                                 <h5 class="product-name">Daily Homeschool Checklist</h5>
                                 <p class="product-price"><span style="text-decoration: line-through; color: #243755;">$9.45</span><span class="span-2-through"> - $5.00</span></p>
@@ -348,27 +354,27 @@
                 </div>
             </section>
 
-            <div class="colorful-lines-2">
-                <div class="line rounded ms-3"></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded "></div>
-                <div class="line rounded me-3"></div>
+            <div class="colorful-lines">
+                <div class="line ms-3"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line me-3"></div>
             </div>
         </main>
 
